git HEAD

    * Added github repo to dist metadata and the doc

Travel::Status::DE::IRIS 1.01 - Fri May 15 2015

    * IRIS->new: Fix default lwp_options value (was documented, but not used)
    * Result->route_interesting: Also consider airports
    * Stations: Update DS100 code list. Fixes 9 stations in Köln, Düsseldorf
      and Wuppertal which had a wrong code/name combination assigned due to
      a parser error

Travel::Status::DE::IRIS 1.00 - Fri May 01 2015

    * IRIS->new: Use lwp_options to explicitly pass arguments to the
      LWP::UserAgent constructor. Unknown arguments are now longer
      implicitly passed on
    * db-iris: Improve output format for wing trains

Travel::Status::DE::IRIS 0.10 - Tue Apr 30 2015

    * Result: Fix deep recursion error in TO_JSON

Travel::Status::DE::IRIS 0.09 - Tue Apr 28 2015

    * Result: Add arrival_wings, departure_wings and is_wing accessors
      (a wing train is coupled to the respective departure, but has its own ID)
    * db-iris: Indicate wings in output
    * Result: Remove train_no_transfer accessor (was based on erroneous
      assumptions)
    * Result: Add is_unscheduled, replaced_by and replacement_for accessors
    * db-iris: Add -oR to show replacement information

Travel::Status::DE::IRIS 0.08 - Thu Mar 12 2015

    * Clarify Result->train_id documentation
    * Add IRIS delay/qos keys 13, 60, 75, 76

Travel::Status::DE::IRIS 0.07 - Fri Jan 09 2015

    * Fix a crash related to unscheduled additional stops in a train's route
    * Improve Travel::Status::DE::IRIS::Stations matching
    * Add IRIS delay/qos keys 56, 59, 61, 65, 73, 74, 77

Travel::Status::DE::IRIS 0.06 - Mon Nov 03 2014

    * New non-core module dependency: List::Compare
    * Add support for canceled and additional stops
    * db-iris: Add options -oa and -oc
    * Result: Add accessors additional_stops and canceled_stops
    * Improve support for delayed trains
    * Support additional IRIS delay messages
